--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
-<resources
-    xmlns:tools = "http://schemas.android.com/tools"
-    tools:ignore = "MissingTranslation">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">LetsShare</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
