--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="invalid_at">Must contain \'@\'</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="aws_public_dns">https://ec2-13-209-22-0.ap-northeast-2.compute.amazonaws.com</string>
+    <string name="aws_public_dns">https://ec2-13-209-22-0.ap-northeast-2.compute.amazonaws.com:8080</string>
 </resources>
